<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="vishwajeet.example.com.hospitaldir.FirstActivity"
    android:background="@drawable/doctor">

    <Button
        android:id="@+id/button3"
        android:layout_width="227dp"
        android:layout_height="72dp"
        android:layout_marginBottom="44dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="@android:color/holo_blue_bright"
        android:backgroundTint="?attr/colorControlNormal"
        android:fontFamily="sans-serif-smallcaps"
        android:onClick="xyz"
        android:text="@string/blood_bank1"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintHorizontal_bias="0.598"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/button4"
        android:layout_width="227dp"
        android:layout_height="72dp"
        android:layout_marginBottom="47dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="@android:color/holo_blue_bright"
        android:backgroundTint="?attr/colorControlNormal"
        android:fontFamily="sans-serif-smallcaps"
        android:onClick="xyz"
        android:text="@string/hospitals"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintHorizontal_bias="0.598"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/button5"
        android:layout_width="227dp"
        android:layout_height="72dp"
        android:layout_marginBottom="132dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="@android:color/holo_blue_bright"
        android:backgroundTint="?attr/colorControlNormal"
        android:fontFamily="sans-serif-smallcaps"
        android:onClick="xyz"
        android:text="@string/survey_reports"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.598"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="104dp"
        android:layout_height="116dp"
        app:srcCompat="@drawable/splash_img"
        android:layout_marginBottom="451dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintVertical_bias="1.0"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="138dp"
        android:layout_height="46dp"
        android:text="@string/take_care"
        android:textAlignment="center"
        android:textColor="@android:color/holo_red_light"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintVertical_bias="0.712"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.339" />

</android.support.constraint.ConstraintLayout>
